<resources>
    <string name="app_name">Apricot</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_search_recipes">Search recipes</string>
    <string name="search_screen_title">Insert recipe information</string>
    <string name="ingredients">Ingredients</string>
    <string name="hint_edit_text_ingredients">comma separated</string>
    <string name="recipe_type_input_label">Recipe type</string>
    <string name="button_submit_search_form">Search</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="vegetarian_only">Only vegetarian recipes</string>
    <string name="vegetarian_only_summary">Show only vegetarian recipes</string>
    <string name="results_limit_label">Maximum number of results</string>
    <string name="results_limit_summary">Set the maximum number of results shown in recipe research</string>
    <string name="cuisines">Cuisines</string>
    <string name="gluten_free_only">Only gluten-free recipes</string>
    <string name="vegan_only">Only vegan recipes</string>
    <string name="intolerances">Intolerances</string>
    <string name="max_preparation_time_label">Maximum preparation time</string>
    <string name="hint_edit_text_max_ready_time">Leave blank if don\'t care</string>
    <string name="hint_edit_text_results_limit">Default 20</string>
    <string name="label_query_input">What are you looking for?</string>
    <string name="placeholder_query_input">Ex. Cake</string>
    <string name="vegan_only_summary">Show only vegan recipes</string>
    <string name="gluten_free_only_summary">Show only gluten-free recipes</string>
    <string name="cuisines_summary">Show only recipes from specified cuisines</string>
    <string name="intolerances_summary">Set your intolerances</string>
    <string name="max_ready_time_summary">Set the maximum ready time of proposed recipes</string>
    <string name="choose_types">Choose recipe type(s)</string>
    <string name="no_ingredient_detected_dialog_confirm_label">Ok</string>
    <string name="add_detected_ingredient_deny_label">Deny</string>
    <string name="gluten_free_only_key">gluten_free_only</string>
    <string name="vegetarian_only_key">vegetarian_only</string>
    <string name="vegan_only_key">vegan_only</string>
    <string name="cuisines_key">cuisines</string>
    <string name="intolerances_key">intolerances</string>
    <string name="max_ready_time_key">max_ready_time</string>
    <string name="results_limit_key">results_limit</string>
    <string name="choose_cuisines">Choose cuisine(s)</string>
    <string name="choose_intolerances">Choose intolerance(s)</string>
    <string name="search_results">Search results</string>
    <string name="favourite_recipes">Favourite recipes</string>
    <string name="no_results">No results</string>
    <string name="sustainable_label">Sustainable</string>
    <string name="ready_in_text">Ready in: %1$d min</string>
    <string name="suitable_for_diets_text">Suitable for %1$s diets</string>
    <string name="price_per_serving_text">Price per serving: €%1$s</string>
    <string name="recipe_details_link_text">Recipe details available at:\n%1$s</string>
    <string name="recipe_types_text">Recipe types: %1$s</string>
    <string name="recipe_classified_as_text">Recipe classified as: %1$s</string>
    <string name="image_view_recipe_detail_content_description">Recipe image</string>
    <string name="icon_favourite_content_description">Favourite</string>
    <string name="button_reset_search_form">Reset</string>
    <string name="camera">Camera</string>
    <string name="detected_ingredient_dialog_title">Detected ingredient</string>
    <string name="add_detected_ingredient_confirm_label">Add</string>
    <string name="no_ingredient_detected_dialog_message">No ingredient found</string>
    <string name="diets">Diets</string>
    <string name="food_specific_ml_model_key">food_specific_ml_model</string>
    <string name="food_specific_ml_model">Use food specific ML model</string>
    <string name="food_specific_ml_model_summary">Use food specific ML model for ingredient recognition</string>
    <string name="recipe_card_image_content_description">Image of %1$s</string>
    <string name="X_frac_Y_ingredients">%1$d/%2$d ingredients</string>
    <string name="recipe_removed_from_favourites">Recipe removed from favourites</string>
    <string name="undo">Undo</string>
    <string name="show_recipe_instructions">Show recipe instructions</string>
    <string name="content_description_scanner_fab">Scan ingredient</string>
    <string name="content_description_recipe_instructions_fab">Show recipe instructions</string>
    <string name="cuisines_list">Cuisine: %1$s</string>
    <string name="dot_spacer">●</string>
    <string name="preparation_time_label">%1$d min</string>
    <string name="gluten_free_label">Gluten free</string>
    <string name="vegan_label">Vegan</string>
    <string name="vegetarian_label">Vegetarian</string>
    <string name="label_ingredients_input">Add ingredient</string>
    <string name="ingredient_input_chip_content_description">Remove ingredient</string>
    <string name="placeholder_ingredients_input">Ex. tomato</string>
    <string name="search_label">Search</string>
    <string name="ingrediets_section_title">Ingredients</string>
    <string name="recipe_type_section_title">What to eat</string>
    <string name="diet_section_title">Diet</string>
    <string name="preferences_section_title">Preferences</string>
    <string name="found_ingredient_message">Found: %1$s</string>
    <string name="ML_model_settings_title">Machine learning model</string>
    <string name="default_filters_settings_title">Default filters</string>
    <string name="appearence_settings_title">Appearance</string>
    <string name="theme_setting_label">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System</string>
    <string name="scanning_error_message">Error during ingredient scanning</string>
    <string name="detected_ingredient_search_dialog">Search</string>
    <string name="detected_ingredient_retry_dialog">Retry</string>
</resources>
